--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ajout d'un titre</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
  </head>
