--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
  </head>
- <body></body>
+ <body>
+   <h1>Deuxième changement</h1>
+ </body>
 </html>
